--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "scripts": {
     "start": "node server.js",
-    "dev":"nodemon ./dist/server.js"
+    "dev": "nodemon ./dist/server.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.2",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "nodemon": "^2.0.13"
   }
