--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "dev": "nodemon ./dist/server.js"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.2",
+    "bcrypt": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.8",
     "nodemon": "^2.0.13"
