--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "typescript": "^4.4.3"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node ./dist/server.js",
+    "build": "tsc",
     "dev": "nodemon ./dist/server.js"
   },
   "devDependencies": {
