--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node ./dist/server.js",
     "build": "tsc",
+    "postinstall": "yarn run build",
     "dev": "nodemon ./dist/server.js"
   },
   "devDependencies": {
